--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Explore Eco Retreat Odisha for luxury glamping experiences at Konark, Satkosia, Bhitarkanika, Daringbadi, Hirakud, Sonapur, and Putsil. Experience nature, adventure, and culture like never before." />
+    <meta name="keywords" content="Eco Retreat Odisha, Konark Eco Retreat, Satkosia glamping, Bhitarkanika eco camp, Daringbadi tourism, Hirakud luxury camping, Sonapur eco tourism, Putsil adventure retreat, Odisha glamping, luxury tents in Odisha, eco tourism Odisha, nature retreats Odisha, Odisha adventure tourism, eco retreat, odisha, luxury camping, glamping, glamour, glamour camping, glamour camping in odisha, glamour camping in konark, glamour camping in satkosia, glamour camping in bhitarkanika, glamour camping in daringbadi, glamour camping in hirakud" />
     <meta name="google-site-verification" content="Kwg4j9W7m4B0S1K-Exp9ywS0YcnDpo7oVkGwbg69NtQ" />
     <script src="https://kit.fontawesome.com/17b927db1b.js" crossorigin="anonymous"></script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
